--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,4 +1,3 @@
 td { white-space: nowrap; }
-#onoff { position:fixed; top:0; left:70px; }
-#micro { position:fixed; top:0; left:70px; }
+#onoff { position:fixed; top:0; right:120px; }
 
