--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,5 +1,5 @@
 td { white-space: nowrap; }
 #onoff { position:fixed; top:0; right:120px; }
-.isOpentrue { ; }
+.isOpentrue { font-weight: bold; }
 .isOpenfalse { text-decoration: line-through; }
 .isOpen { font-style: italic; } /* unknown open or not */
